RDM-8530 - BEFTA integration - Java 11 warnings
   [RDM-8530](https://tools.hmcts.net/jira/browse/RDM-8530)

Suppress Java 11 illegal reflective access warnings from BEFTA framework